--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="1a" class="date"></p>
+      <p id="2a" class="time"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
       <div id="hour8" class="row time-block past">
       <div class="col-md-1 hour">8:00am</div>
       <textarea class="col-md-10 description"></textarea>
